# qmfcalc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  python-package.yml
core/: CMakeLists.txt  matrix_method_calculator.cpp  resolution_estimator.cpp  voltage_calculator.cpp
core/include/qmfcalc/: ion_config.h  matrix_method_calculator.h  resolution_estimator.h  result.h  rod_config.h  stability_diagram.h  voltage_calculator.h
core/include/qmscalc/: ion_config.h  matrix_method_calculator.h  resolution_estimator.h  result.h  rod_config.h  stability_diagram.h  voltage_calculator.h
doc/: CMakeLists.txt  command.md
exec/: CMakeLists.txt  analyze_resolution.cc  calculate_voltage.cc  qmf_calc.cpp  qms_calc.cpp
exec/data_qms_calc/: data.root
python/: CMakeLists.txt  qmfcalc_pybind.cpp  qmscalc_pybind.cpp
