[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[project]
name = "qmfcalc"
version = "0.1.1"
description = "Python bindings for quadrupole mass filter voltage calculations"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.scikit-build]
cmake.version = ">=3.28"
wheel.packages = []

[tool.scikit-build.cmake.define]
QMFCALC_BUILD_PYTHON = true
QMFCALC_BUILD_EXECUTABLES = false
QMFCALC_BUILD_DOCS = false
